fix(ai): Renewal 계약과 승인 상태 정합성 보강